--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,71 +1,33 @@
+public net.minecraft.world.item.crafting.ShapedRecipe result
+public net.minecraft.world.item.crafting.ShapedRecipe pattern
+public net.minecraft.world.item.crafting.ShapelessRecipe result
+public net.minecraft.world.item.crafting.SmithingTransformRecipe result
+public net.minecraft.world.item.crafting.SmithingTransformRecipe template # template
+public net.minecraft.world.item.crafting.SmithingTransformRecipe base
+public net.minecraft.world.item.crafting.SmithingTransformRecipe addition
 
-protected net.minecraft.data.recipes.ShapedRecipeBuilder f_126106_ # result
-protected net.minecraft.data.recipes.ShapedRecipeBuilder f_126107_ # count
-protected net.minecraft.data.recipes.ShapedRecipeBuilder f_126108_ # rows
-protected net.minecraft.data.recipes.ShapedRecipeBuilder f_126109_ # key
-protected net.minecraft.data.recipes.ShapedRecipeBuilder f_126110_ # advancement
-protected net.minecraft.data.recipes.ShapedRecipeBuilder f_126111_ # group
-protected net.minecraft.data.recipes.ShapedRecipeBuilder m_126143_(Lnet/minecraft/resources/ResourceLocation;)V # ensure valid
+public net.minecraft.data.recipes.ShapedRecipeBuilder criteria # criteria
+public net.minecraft.data.recipes.ShapedRecipeBuilder group # group
+public net.minecraft.data.recipes.ShapedRecipeBuilder category # category
+public net.minecraft.data.recipes.ShapedRecipeBuilder result # result
+public net.minecraft.data.recipes.ShapedRecipeBuilder count # count
+public net.minecraft.data.recipes.ShapedRecipeBuilder showNotification # showNotification
+public net.minecraft.data.recipes.ShapedRecipeBuilder ensureValid(Lnet/minecraft/resources/ResourceLocation;)Lnet/minecraft/world/item/crafting/ShapedRecipePattern; # ensureValid
+public net.minecraft.data.recipes.ShapelessRecipeBuilder count # count
+public net.minecraft.data.recipes.ShapelessRecipeBuilder result # result
+public net.minecraft.data.recipes.ShapelessRecipeBuilder category # category
+public net.minecraft.data.recipes.ShapelessRecipeBuilder criteria # criteria
+public net.minecraft.data.recipes.ShapelessRecipeBuilder ingredients # ingredients
+public net.minecraft.data.recipes.ShapelessRecipeBuilder group # group
+public net.minecraft.data.recipes.ShapelessRecipeBuilder ensureValid(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
+public net.minecraft.data.recipes.SmithingTransformRecipeBuilder criteria # criteria
+public net.minecraft.data.recipes.SmithingTransformRecipeBuilder category # category
+public net.minecraft.data.recipes.SmithingTransformRecipeBuilder result # result
+public net.minecraft.data.recipes.SmithingTransformRecipeBuilder addition # addition
+public net.minecraft.data.recipes.SmithingTransformRecipeBuilder base # base
+public net.minecraft.data.recipes.SmithingTransformRecipeBuilder template # template
+public net.minecraft.data.recipes.SmithingTransformRecipeBuilder ensureValid(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
 
-protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126173_ # result
-protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126174_ # count
-protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126175_ # ingredients
-protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126176_ # advancement
-protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126177_ # group
-protected net.minecraft.data.recipes.ShapelessRecipeBuilder m_126207_(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
-
-protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_266090_ # advancement
-protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_265893_ # base
-protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_265959_ # addition
-protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_266005_ # result
-protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_266006_ # type
-protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder m_266305_(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
-
-public net.minecraft.advancements.critereon.StatePropertiesPredicate$RangedPropertyMatcher
-public net.minecraft.advancements.critereon.StatePropertiesPredicate$Builder f_67691_ # matchers
-public net.minecraft.advancements.Advancement$Builder <init>(Z)V # Builder
-public net.minecraft.advancements.Advancement$Builder <init>(Lnet/minecraft/resources/ResourceLocation;Lnet/minecraft/advancements/DisplayInfo;Lnet/minecraft/advancements/AdvancementRewards;Ljava/util/Map;[[Ljava/lang/String;Z)V # Builder
-
-public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265888_ # base
-public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265907_ # addition
-public net.minecraft.world.item.crafting.SmithingTransformRecipe f_266098_ # result
-
-public net.minecraft.world.item.crafting.LegacyUpgradeRecipe f_265911_ # base
-public net.minecraft.world.item.crafting.LegacyUpgradeRecipe f_265910_ # addition
-public net.minecraft.world.item.crafting.LegacyUpgradeRecipe f_265880_ # result
-
-public net.minecraft.world.item.crafting.ShapedRecipe f_44149_ # result
-public net.minecraft.world.item.crafting.ShapelessRecipe f_44243_ # result
-
-public net.minecraft.client.gui.Gui f_92986_ # minecraft
-public net.minecraft.client.gui.Gui f_92977_ # screenWidth
-public net.minecraft.client.gui.Gui f_92978_ # screenHeight
-
-protected net.minecraft.world.SimpleContainer f_19147_ # items
-
-public net.minecraft.world.entity.LivingEntity f_20945_ # activeEffects
-public net.minecraft.world.entity.LivingEntity f_20948_ # effectsDirty
-public net.minecraft.world.entity.LivingEntity m_142540_(Lnet/minecraft/world/effect/MobEffectInstance;Lnet/minecraft/world/entity/Entity;)V # onEffectAdded
-public net.minecraft.world.entity.LivingEntity m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V # onEffectUpdated
-public net.minecraft.world.entity.LivingEntity m_7285_(Lnet/minecraft/world/effect/MobEffectInstance;)V # onEffectRemoved
-public net.minecraft.server.level.ServerPlayer m_142540_(Lnet/minecraft/world/effect/MobEffectInstance;Lnet/minecraft/world/entity/Entity;)V # onEffectAdded
-public net.minecraft.server.level.ServerPlayer m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V # onEffectUpdated
-public net.minecraft.server.level.ServerPlayer m_7285_(Lnet/minecraft/world/effect/MobEffectInstance;)V # onEffectRemoved
-
-public net.minecraft.world.effect.MobEffectInstance f_19503_ # duration
-public net.minecraft.world.effect.MobEffectInstance f_19504_ # amplifier
-public net.minecraft.world.effect.MobEffectInstance f_19506_ # ambient
-public net.minecraft.world.effect.MobEffectInstance f_19507_ # noCounter
-public net.minecraft.world.effect.MobEffectInstance f_19508_ # visible
-public net.minecraft.world.effect.MobEffectInstance f_19509_ # showIcon
-
-public net.minecraft.client.renderer.LevelRenderer f_109463_ # entityRenderDispatcher
-public net.minecraft.client.renderer.RenderStateShard f_110135_ # ADDITIVE_TRANSPARENCY
-public net.minecraft.client.renderer.RenderStateShard f_110111_ # NO_DEPTH_TEST
-public net.minecraft.client.renderer.RenderStateShard f_173083_ # RENDERTYPE_ENTITY_GLINT_SHADER
-
-public net.minecraft.world.inventory.AbstractContainerMenu m_38895_(Lnet/minecraft/world/inventory/DataSlot;)Lnet/minecraft/world/inventory/DataSlot; # addDataSlot
-public net.minecraft.world.entity.player.Inventory m_36014_(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)Z # hasRemainingSpaceForItem
-
-public net.minecraft.world.level.Level m_255157_(Lnet/minecraft/world/level/GameRules$Key;)Lnet/minecraft/world/level/Explosion$BlockInteraction; # getDestroyType
-
+public net.minecraft.advancements.critereon.StatePropertiesPredicate$Builder matchers # matchers
+public net.minecraft.advancements.critereon.StatePropertiesPredicate$PropertyMatcher
+public net.minecraft.advancements.critereon.StatePropertiesPredicate$RangedMatcher
