--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ base {
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
+minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')
+
 runs {
     configureEach {
         systemProperty 'forge.logging.markers', 'REGISTRIES'
