--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -31,3 +31,37 @@ public net.minecraft.data.recipes.SmithingTransformRecipeBuilder ensureValid(Lne
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$Builder matchers # matchers
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$PropertyMatcher
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$RangedMatcher
+
+public net.minecraft.world.entity.LivingEntity onEffectAdded(Lnet/minecraft/world/effect/MobEffectInstance;Lnet/minecraft/world/entity/Entity;)V # onEffectAdded
+public net.minecraft.world.entity.LivingEntity onEffectUpdated(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V # onEffectUpdated
+public net.minecraft.world.entity.LivingEntity onEffectRemoved(Lnet/minecraft/world/effect/MobEffectInstance;)V # onEffectRemoved
+public net.minecraft.world.entity.LivingEntity activeEffects # activeEffects
+public net.minecraft.world.entity.LivingEntity effectsDirty # effectsDirty
+public net.minecraft.server.level.ServerPlayer onEffectAdded(Lnet/minecraft/world/effect/MobEffectInstance;Lnet/minecraft/world/entity/Entity;)V # onEffectAdded
+public net.minecraft.server.level.ServerPlayer onEffectUpdated(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V # onEffectUpdated
+public net.minecraft.server.level.ServerPlayer onEffectRemoved(Lnet/minecraft/world/effect/MobEffectInstance;)V # onEffectRemoved
+public net.minecraft.world.effect.MobEffectInstance duration # duration
+public net.minecraft.world.effect.MobEffectInstance amplifier # amplifier
+public net.minecraft.world.effect.MobEffectInstance ambient # ambient
+public net.minecraft.world.effect.MobEffectInstance visible # visible
+public net.minecraft.world.effect.MobEffectInstance showIcon # showIcon
+
+public net.minecraft.client.renderer.LevelRenderer entityRenderDispatcher # entityRenderDispatcher
+public net.minecraft.client.renderer.RenderStateShard ADDITIVE_TRANSPARENCY # ADDITIVE_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard NO_DEPTH_TEST # NO_DEPTH_TEST
+public net.minecraft.client.renderer.RenderStateShard RENDERTYPE_ENTITY_GLINT_SHADER # RENDERTYPE_ENTITY_GLINT_SHADER
+
+
+# public net.minecraft.advancements.Advancement$Builder <init>(Z)V # Builder
+# public net.minecraft.advancements.Advancement$Builder <init>(Lnet/minecraft/resources/ResourceLocation;Lnet/minecraft/advancements/DisplayInfo;Lnet/minecraft/advancements/AdvancementRewards;Ljava/util/Map;[[Ljava/lang/String;Z)V # Builder
+
+# public net.minecraft.client.gui.Gui f_92986_ # minecraft
+# public net.minecraft.client.gui.Gui f_92977_ # screenWidth
+# public net.minecraft.client.gui.Gui f_92978_ # screenHeight
+
+public net.minecraft.world.SimpleContainer items # items
+public net.minecraft.world.inventory.AbstractContainerMenu addDataSlot(Lnet/minecraft/world/inventory/DataSlot;)Lnet/minecraft/world/inventory/DataSlot; # addDataSlot
+public net.minecraft.world.entity.player.Inventory hasRemainingSpaceForItem(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)Z # hasRemainingSpaceForItem
+
+public net.minecraft.world.level.Level getDestroyType(Lnet/minecraft/world/level/GameRules$Key;)Lnet/minecraft/world/level/Explosion$BlockInteraction; # getDestroyType
+
