--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ neogradle.subsystems.parchment.mappingsVersion=2023.12.31
 
 minecraft_version=1.20.4
 minecraft_version_range=[1.20.4,1.21)
-neo_version=20.4.80-beta
+neo_version=20.4.160-beta
 neo_version_range=[20.4,)
 loader_version_range=[2,)
 
@@ -18,15 +18,15 @@ loader_version_range=[2,)
 mod_id=l2library
 mod_name=L2Library
 mod_license=LGPL-2.1
-mod_version=2.5.0-pre0
+mod_version=2.5.0-pre1
 mod_group_id=dev.xkmc
 mod_authors=lcy0x1
 mod_description=Library mod for all L2 mods
 
 registrate_version = MC1.20-1.3.11
-jei_minecraft_version = 1.20.1-forge
-jei_version = 15.2.0.23
-curios_version = 5.3.4+1.20.1
+jei_minecraft_version = 1.20.4-neoforge
+jei_version = 17.3.0.49
+curios_version = 7.3.0+1.20.4
 
 lljij = true
 rootMod = true
